--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
+.Loading {
+  text-align: center;
+}
+
+.Loading-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
@@ -29,4 +33,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+li {
+  list-style: none;
 }
